examples/test/testpolicy2131.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2131
  namespace: namespace435
spec:
  podSelector:
    matchLabels:
      key48: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value14
          key21: value42
      podSelector:
        matchLabels:
          key46: value17
          key43: value10
